--- a/myweb1.html
+++ b/myweb1.html
@@ -7,7 +7,7 @@
       Hello world
       <h1> I am sleepy</h1>
        <h2> error</h2>
-       <h2> i don understand</h2>
+       <h2 style="color:blue;"> i don understand</h2>
         <p>Hello</p>
     </body>
 </html>
